force-app/main/default/objects/Description_Change__c/Description_Change__c.object-meta.xml
<CustomObject>
    <description>Tracks description changes and changes to the &quot;Opportunity Updates&quot; fields on the opportunity since Salesforce does not allow tracking changes on long text fields.</description>
    <label>Description Change/Opp Update</label>
    <nameField>
        <displayFormat>DC-{00000}</displayFormat>
        <label>Description Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Description Changes and Updates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>