force-app/main/default/objects/Description_Change__c/fields/Deal_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Deal_Strategy__c</fullName>
    <label>Deal Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>