force-app/main/default/objects/Description_Change__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description from opportunity at the time of this change.</description>
    <inlineHelpText>Description from opportunity at the time of this change.</inlineHelpText>
    <label>Description Change</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>