force-app/main/default/objects/Description_Change__c/fields/Opportunity_Update__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Update__c</fullName>
    <description>For use by sales or other opportunity drivers to note critical updates to the opportunity progression.</description>
    <inlineHelpText>For use by sales or other opportunity drivers to note critical updates to the opportunity progression.</inlineHelpText>
    <label>Opportunity Update</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>